Fetch investigation JSON and parse it

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,4 @@ authors = ["James Cox-Morton <th3james@fastmail.fm>"]
 
 [dependencies]
 hyper = { version = "0.9", default-features = false, features = ["security-framework"] }
+rustc-serialize = "*"
